--- a/messaging/deploy/roles/nginx/templates/nginx.conf.j2
+++ b/messaging/deploy/roles/nginx/templates/nginx.conf.j2
@@ -17,7 +17,6 @@ http {
     client_max_body_size         2m;
     client_body_buffer_size      10k;
     client_header_buffer_size    1k;
-    large_client_header_buffers  2 1k;
 
     # hide server/version in response header
     server_tokens             off;
@@ -94,6 +93,8 @@ http {
 
             proxy_pass              http://ipfs_websocket;
             proxy_read_timeout 86400; # http://nginx.org/en/docs/http/websocket.html
+            proxy_buffers 8 32k;
+            proxy_buffer_size 64k;
 
         }
 
